--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
         "express": "^4.18.2",
         "mongoose": "^7.5.2",
         "tsyringe": "^4.8.0",
-        "ulid": "^2.3.0"
+        "ulid": "^2.3.0",
+        "yup": "^1.2.0"
     },
     "devDependencies": {
         "@types/express": "^4.17.17",
@@ -32,6 +33,7 @@
         "@types/node": "^20.6.1",
         "@types/reflect-metadata": "^0.1.0",
         "@types/supertest": "^2.0.12",
+        "@types/yup": "^0.32.0",
         "jest": "^29.7.0",
         "nodemon": "^3.0.1",
         "reflect-metadata": "^0.1.13",
