doc: open-api + swagger

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,8 @@
       "strict": true,
       "experimentalDecorators": true,
       "emitDecoratorMetadata": true,
-      "skipLibCheck": true
+      "skipLibCheck": true,
+      "resolveJsonModule": true
     }
   }
+  
