--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "mongoose": "^7.5.2",
+        "swagger-ui-express": "^5.0.0",
         "tsyringe": "^4.8.0",
         "ulid": "^2.3.0",
         "yup": "^1.2.0"
@@ -33,6 +34,7 @@
         "@types/node": "^20.6.1",
         "@types/reflect-metadata": "^0.1.0",
         "@types/supertest": "^2.0.12",
+        "@types/swagger-ui-express": "^4.1.3",
         "@types/yup": "^0.32.0",
         "jest": "^29.7.0",
         "nodemon": "^3.0.1",
