chore: adding docker in project

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-MONGO_URL=mongodb://clear:clear@localhost:27017/clear_api?retryWrites=true
+MONGO_URL=mongodb://clear:clear@clear-db:27017/clear_api?retryWrites=true
 HOST=localhost
 PORT=8000
 ENVIRONMENT=development
