--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
     "name": "clear-sales-api",
     "version": "1.0.0",
-    "description": "",
+    "description": "customer api",
     "main": "src/index.ts",
+    "keywords": [
+        "backend",
+        "node",
+        "typescript"
+      ],
     "scripts": {
-        "start": "nodemon src/index.ts",
+        "dev": "nodemon src/index.ts",
         "test": "jest --runInBand ./tests/",
         "test:coverage": "jest --runInBand --coverage --no-cache ./tests",
         "build": "npx tsc"
@@ -43,5 +48,8 @@
         "ts-jest": "^29.1.1",
         "ts-node": "^10.9.1",
         "typescript": "^5.2.2"
+    },
+    "engines": {
+        "node": "18.15"
     }
 }
